base/src/test/resources/failure/tyck/issues/issue659-01.aya.txt
In file $FILE:1:31 ->

  1 |   def why {A : Type} : A -> A => \ {x} => x
    |                                  ^--------^

Error: Cannot check
         \ {x} => x
       against the Pi type
         A -> A
       because explicitness do not match

1 error(s), 0 warning(s).
What are you doing?
